[project]
name = "github-activity-exporter"
version = "0.1.0"
description = "Export and analyze your GitHub activity across organizations."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Ignore Line too long and Module level import not at top of cell
ignore = ["E402", "E501"]
